--- a/src/styles/variables/_mixins.scss
+++ b/src/styles/variables/_mixins.scss
@@ -130,3 +130,40 @@
         -ms-align-self: $align;
             align-self: $align;
   }
+
+
+/*
+* Generates classes for a grid of columns, prefixed by size.
+* The result will be .col-[size]-[col]-[total-columns] E.g. .col-xs-6-12
+*
+* @param {string}	$size			The name of the size target (e.g. xs, sm, md, lg, xl, etc.)
+* @param {int}		$grid-columns	Amount of columns
+*/
+@mixin grid-generator($size, $grid-columns) {
+  @for $i from 1 through $grid-columns {
+    .col-#{$size}-#{$i}-#{$grid-columns} {
+      width: percentage($i / $grid-columns);
+      float: left;
+    }
+  }
+}
+
+  /*
+ * A mixin targeting a specific device width and larger.
+ * These are the available targets: 'xs', 'sm', 'md', 'lg', 'xl'
+ *
+ * @param {string} $media The target media
+ */
+@mixin respond-from($media) {
+	@if $media == xs {
+		@media (min-width: 0px)  { @content; }
+	} @else if $media == sm {
+		@media (min-width: 768px) { @content; }
+	} @else if $media == md {
+		@media (min-width: 1200) { @content; }
+	} @else if $media == lg {
+		@media (min-width: 1440) { @content; }
+	} @else if $media == xl {
+		@media (min-width: 1800) { @content; }
+	}
+}
