--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import './variables/colors';
 @import './variables/measures';
 
+@import './elements/basics';
 @import './elements/text';
 @import './elements/titles';
 @import './elements/img';
