--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -1,37 +1,47 @@
-.nav{
-    &--main{
+.nav {
+    &--main {
         @include align-items(center);
         display: grid;
         grid-template-columns: 150px auto auto auto;
         padding: 10px 15px;
-        background: linear-gradient($gradient-blue,$brand-ligther);
-        @media(max-width: 768px){
+        background: linear-gradient($gradient-blue, $brand-ligther);
+
+        @media(max-width: 768px) {
             grid-template-columns: 60px auto auto auto;
         }
-        .nav_menu_item{
-            &:not(:last-child){
-                .nav_menu_link{
+
+        .nav_menu_item {
+            &:not(:last-child) {
+                .nav_menu_link {
                     margin-right: 15px;
                 }
             }
         }
-        .nav_menu_link{
+
+        .nav_menu_link {
             color: #fff;
         }
     }
-    &_left-menu, &_right-menu, &_loginregister-menu{
+
+    &_left-menu,
+    &_right-menu,
+    &_loginregister-menu {
         @include flexbox;
         @include flex-direction(row);
-        .nav_menu_link{
+
+        .nav_menu_link {
             text-decoration: none;
         }
     }
-    &_left-menu{
+
+    &_left-menu {
         @include justify-content(flex-end);
     }
-    &_right-menu{
+
+    &_right-menu {
         @include justify-content(flex-end);
-        @media(max-width: 992px){
+
+        @media(max-width: 992px) {
             display: none;
             @include flex-direction(column);
             @include align-items(center);
@@ -39,20 +49,23 @@
             position: fixed;
             left: 0;
             top: 0;
-            background-color: rgba($brand-ligther,0.95);
+            background-color: rgba($brand-ligther, 0.95);
             height: 100%;
             width: 100%;
-            &.opened{
+
+            &.opened {
                 @include flexbox;
             }
-            .nav_menu_item{
-                &:not(:last-child){
-                    .nav_menu_link{
+
+            .nav_menu_item {
+                &:not(:last-child) {
+                    .nav_menu_link {
                         margin-bottom: 25px;
                     }
                 }
             }
-            .nav_menu_link{
+
+            .nav_menu_link {
                 color: #fff;
                 text-decoration: none;
                 font-size: 1.5rem;
@@ -61,19 +74,23 @@
             }
         }
     }
-    &_loginregister-menu{
+
+    &_loginregister-menu {
         @include justify-content(flex-end);
         @include align-items(center);
-        .btn{
+
+        .btn {
             display: inline-block;
         }
-        li:not(:last-child){
-            .btn:first-child{
+
+        li:not(:last-child) {
+            .btn:first-child {
                 margin-right: 10px;
             }
         }
-        @media(max-width: 992px){
-            .btn{
+
+        @media(max-width: 992px) {
+            .btn {
                 padding: 0;
                 background-color: transparent;
                 border: none;
@@ -81,23 +98,26 @@
             }
         }
     }
-    .separator_menu{
+
+    .separator_menu {
         color: #fff;
         display: inline-block;
         margin-right: 10px;
-        @media(min-width: 992px){
+
+        @media(min-width: 992px) {
             display: none;
         }
     }
 }
 
-.logo-mobile{
-    @media(min-width: 768px){
+.logo-mobile {
+    @media(min-width: 768px) {
         display: none;
     }
 }
-.logo-desktop{
-    @media(max-width: 767px){
+
+.logo-desktop {
+    @media(max-width: 767px) {
         display: none;
     }
 }
