--- a/src/styles/elements/_text.scss
+++ b/src/styles/elements/_text.scss
@@ -1,9 +1,9 @@
-body{
-    font-family: Poppins, 'Arial';
+body {
+    font-family: "Raleway", sans-serif;
     font-size: 14px;
 }
 
-p{
+p {
     font-size: 14px;
     line-height: 1.3rem;
 }
