--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -76,18 +76,34 @@
 
 .search-results {
     display: grid;
-    grid-template-columns: repeat(4, calc(25% - 16px));
+    grid-template-rows: auto auto;
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-gap: 20px;
-    padding-top: 35px;
-    @include justify-content(center);
 
-    @media(max-width: 992px) {
-        grid-template-columns: repeat(3, 31.333%);
+    &_info {
+        padding: 20px 0;
     }
 
-    @media(max-width: 768px) {
-        grid-template-columns: repeat(2, 48%);
+    &_title {
+        grid-row-start: 1;
+        text-align: left;
+    }
+
+    &_inner {
+        display: grid;
+        grid-template-columns: repeat(4, calc(25% - 16px));
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 2;
+        grid-gap: 20px;
+        @include justify-content(center);
+
+        @media(max-width: 992px) {
+            grid-template-columns: repeat(3, 31.333%);
+        }
+
+        @media(max-width: 768px) {
+            grid-template-columns: repeat(2, 48%);
+        }
     }
 }
