--- a/src/styles/elements/_titles.scss
+++ b/src/styles/elements/_titles.scss
@@ -1,21 +1,38 @@
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-size: Poppins, 'Arial';
 }
-h1{
+
+h1 {
     font-size: 48px;
 }
-h2{
+
+h2 {
     font-size: 32px;
 }
-h3{
+
+h3 {
     font-size: 28px;
 }
-h4{
+
+h4 {
     font-size: 26px;
 }
-h5{
+
+h5 {
     font-size: 20px;
 }
-h6{
+
+h6 {
     font-size: 16px;
+}
+
+.title-md {
+    font-size: 1.3rem;
+    line-height: 2rem;
+    font-weight: 600;
 }
