--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'css-reset-and-normalize/scss/reset-and-normalize.scss';
+@import './variables/fonts';
 @import './variables/mixins';
 @import './variables/colors';
 @import './variables/measures';
@@ -12,6 +13,7 @@
 @import './blocks/badges';
 @import './blocks/cards';
 @import './blocks/check';
+@import './blocks/banner';
 
 @import './components/menu';
 @import './components/filters';
