--- a/src/styles/blocks/_badges.scss
+++ b/src/styles/blocks/_badges.scss
@@ -4,25 +4,36 @@
     text-decoration: none;
 
     &-card {
-        font-size: 10px;
+        font-size: 8px;
         line-height: 1.1rem;
         text-transform: uppercase;
-        font-weight: bold;
         display: inline-block;
         padding: 2px 15px 0;
         margin-bottom: 8px;
+        letter-spacing: 2.5px;
     }
 
     &-card_info {
         position: absolute;
         top: 10px;
         right: 10px;
-        font-weight: bold;
         text-transform: uppercase;
-        padding: 0 10px;
-        font-size: 14px;
+        padding: 3px 15px;
+        font-size: 1rem;
         line-height: 1.4rem;
         display: inline-block;
+        @include flexbox;
+        @include align-items(center);
+        @include justify-content(center);
+
+        span {
+            padding-top: 1px;
+            line-height: 1rem;
+        }
+
+        svg {
+            margin-left: 3px;
+        }
     }
 
     &--recipe,
