--- a/src/styles/blocks/_cards.scss
+++ b/src/styles/blocks/_cards.scss
@@ -1,8 +1,36 @@
 .card {
     text-align: left;
 
+    &--premium {
+        .card-ribbon {
+            background-color: $alternative-yellow;
+        }
+    }
+
+    &-ribbon {
+        position: absolute;
+        left: -22px;
+        top: -39px;
+        border-radius: 3px;
+        text-align: center;
+        height: 125px;
+        width: 70px;
+        transform: rotate(40deg);
+        @include flexbox @include align-items(center);
+        @include justify-content(center);
+
+        svg {
+            transform: rotate(-40deg);
+            position: absolute;
+            left: 35px;
+            top: 48px;
+        }
+    }
+
     &-img {
         position: relative;
+        border-radius: 5px;
+        overflow: hidden;
 
         img {
             border-radius: 5px;
@@ -17,18 +45,23 @@
 
     &-title {
         font-weight: 600;
-        font-size: 20px;
+        font-size: 1.1rem;
         line-height: 1.4rem;
         margin-bottom: 10px;
 
-        @media(max-width: 992px) {
-            font-size: 1.5rem;
-            line-height: 2rem;
+        @include respond-below(md) {
+            font-size: 1.2rem;
+            line-height: 1.3rem;
         }
 
-        @media(max-width: 768px) {
-            font-size: 1.5rem;
-            line-height: 2rem;
+        @include respond-below(sm) {
+            font-size: 1.2rem;
+            line-height: 1.3rem;
+        }
+
+        @include respond-below(xs) {
+            font-size: 1rem;
+            line-height: 1.1rem;
         }
 
         a {
