--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -8,14 +8,14 @@ $brand-darker: #61938C;
 $brand: #6caea4;
 $brand-ligther: #7CC5BA;
 $brand-ligther2: #7CC5BA;
-$brand-ligthen: #91D9CE;
+$brand-ligthen: hsl(171, 49%, 90%);
 
 $secondary-brand-darken: #71303a;
 $secondary-brand-darker: #b43548;
 $secondary-brand: #da344d;
 $secondary-brand-ligther: #f7405c;
 $secondary-brand-ligther2: #ff5871;
-$secondary-brand-ligthen: #ffb0b5;
+$secondary-brand-ligthen: hsl(356, 100%, 90%);
 
 $gray-darken: #272727;
 $gray: #9B9B9B;
