Maquetación buscador portada

--- a/src/styles/blocks/_buttons.scss
+++ b/src/styles/blocks/_buttons.scss
@@ -111,4 +111,6 @@ a[class*='btn'] {
     height: 50px;
     text-align: center;
     line-height: 1rem;
+    border: none;
+    border-radius: 50%;
 }
