--- a/src/styles/elements/_titles.scss
+++ b/src/styles/elements/_titles.scss
@@ -36,3 +36,9 @@ h6 {
     line-height: 2rem;
     font-weight: 600;
 }
+
+//Title extras
+.title-line {
+    max-width: 10rem;
+    margin-top: 30px;
+}
