--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -10,9 +10,13 @@
     position: relative;
     overflow: hidden;
 
+    @include respond-below(sm) {
+        height: 75vh;
+    }
+
     &_img {
         position: absolute;
-        max-width: 650px;
+        max-width: 35vw;
 
         &--left {
             left: -13vw;
@@ -20,6 +24,24 @@
 
         &--right {
             right: -15vw;
+        }
+
+        @include respond-below(md) {
+            bottom: 50px;
+            min-width: 400px;
+        }
+
+        @include respond-below(xs) {
+            bottom: 50px;
+            min-width: 350px;
+
+            &--left {
+                left: -40vw;
+            }
+
+            &--right {
+                right: -40vw;
+            }
         }
     }
 
@@ -29,6 +51,16 @@
         grid-row-start: 2;
         position: relative;
         z-index: 99;
+        max-width: 1200px;
+        margin: 0 auto;
+
+        @include respond-below(md) {
+            max-width: 100vw;
+        }
+
+        @include respond-below(sm) {
+            max-width: 100vw;
+        }
     }
 
     &_title {
@@ -37,25 +69,56 @@
         margin-bottom: 15px;
         font-size: 4rem;
         line-height: 5rem;
+
+        @include respond-below(md) {
+            font-size: 6vw;
+            line-height: 6vw;
+        }
+
+        @include respond-below(sm) {
+            font-size: 8vw;
+            line-height: 8vw;
+        }
     }
 
     &_subtitle {
         color: #fff;
+        line-height: 2rem;
+
+        @include respond-below(md) {
+            font-size: 2vw;
+            line-height: 2.5vw;
+        }
+
+        @include respond-below(sm) {
+            font-size: 3vw;
+            line-height: 3.5vw;
+        }
     }
 
     &_searchbox {
         grid-column-start: 2;
         grid-column-end: 3;
         grid-row-start: 3;
+        position: relative;
+        z-index: 99;
 
         &_block {
             @include flexbox;
             @include align-items(center);
             background-color: #fff;
             border-radius: 50px;
-            max-width: 1000px;
+            max-width: 900px;
             margin: 0 auto;
             position: relative;
+
+            @include respond-below(md) {
+                max-width: 70vw;
+            }
+
+            @include respond-below(sm) {
+                max-width: 100vw;
+            }
         }
 
         &_input {
@@ -70,11 +133,24 @@
             text-align: center;
             font-weight: 100;
             border: 5px solid #fff;
-            box-shadow: 0 5px 30px 0 rgba(#000, 0);
+            box-shadow: 0 5px 10px 0 rgba($brand-darker, 0);
             transition: box-shadow 0.3s;
 
-            &:focus {
-                box-shadow: 0 5px 30px 0 rgba(#000, 0.2);
+            @include respond-below(md) {
+                font-size: 2vw;
+                text-align: center;
+            }
+
+            @include respond-below(sm) {
+                font-size: 3.5vw;
+                text-align: left;
+                padding: 0 20px;
+            }
+
+            &:focus,
+            &active {
+                box-shadow: 0 0px 50px 0 rgba($brand-darker, 0.7);
+                outline: none;
             }
         }
 
