--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -145,3 +145,19 @@
         display: none;
     }
 }
+
+//Explore menu
+.explore-menu {
+    display: none;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    left: 0;
+    top: 0;
+    background-color: #fff;
+    box-shadow: 0 10px 30px 0 rgba(#000, 0.04);
+    z-index: 9;
+    border-radius: $border-radius;
+    @extend %basic-grid;
+    @include grid-col-startend(2, 2);
+}
