Cambios en portada

--- a/src/styles/blocks/_banner.scss
+++ b/src/styles/blocks/_banner.scss
@@ -6,8 +6,8 @@
     padding: 70px 0;
 
     @include respond-below(sm) {
-        padding: 50px 0;
-        grid-template-columns: 1fr;
+        padding: 2rem 0;
+        grid-template-columns: 1fr auto 1fr;
         grid-gap: 20px;
     }
 }
@@ -21,10 +21,12 @@
 
     @include respond-below(md) {
         height: 280px;
+        grid-column-start: 2;
     }
 
     @include respond-below(sm) {
         height: 230px;
+        grid-column-start: 2;
     }
 
     &-content {
