--- a/src/styles/elements/_titles.scss
+++ b/src/styles/elements/_titles.scss
@@ -35,10 +35,17 @@ h6 {
     font-size: 1.3rem;
     line-height: 2rem;
     font-weight: 600;
+    @include respond-below(sm){
+        font-size: 1.1rem;
+        line-height: 1.5rem;
+    }
 }
 
 //Title extras
 .title-line {
     max-width: 10rem;
     margin-top: 30px;
+    @include respond-below(sm){
+        max-width: 6rem;
+    }
 }
