--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -3,12 +3,19 @@
         padding: 10px 0;
         background: linear-gradient($gradient-blue, $brand-ligther);
         display: grid;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 98;
         @extend %basic-grid;
 
         .nav_menu_item {
             &:not(:last-child) {
                 .nav_menu_link {
                     margin-right: 15px;
+                    @include respond-below(sm){
+                        margin-right: 5px;
+                    }
                 }
             }
         }
@@ -26,7 +33,7 @@
         grid-column-end: 3;
 
         @media(max-width: 768px) {
-            grid-template-columns: 60px auto auto auto;
+            grid-template-columns: 40px auto auto auto;
         }
     }
 
@@ -51,28 +58,59 @@
         @include justify-content(flex-start);
         @include align-items(center);
         padding-left: 40px;
+        @include respond-below(sm){
+            padding-left: 20px;
+        }
     }
 
     &_right-menu {
         @include justify-content(flex-end);
 
         @media(max-width: 992px) {
-            display: none;
+            @include flexbox;
             @include flex-direction(column);
             @include align-items(center);
             @include justify-content(center);
             position: fixed;
+            width: 40px;
+            height: 40px;
+            overflow: hidden;
+            border-radius: 50%;
+            right: 0;
             left: 0;
-            top: 0;
-            background-color: rgba($brand-ligther, 0.95);
-            height: 100%;
-            width: 100%;
+            transition: all 0.2s;
+            opacity: 0;
+            top: 50%;
+            margin: 0 auto;
+            z-index: -1;
+            transform: translateY(-50%);
+            &::before{
+                content: "";
+                border-radius: 0;
+                transform: scale(1);
+                transform-origin: center center;
+                position: absolute;
+                left: 0;
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+                background-color: rgba($brand-ligther, 0.95);
+                transition: all 2s;
+            }
 
             &.opened {
-                @include flexbox;
+                width: 100%;
+                height: 100%;
+                border-radius: 0;
+                opacity: 1;
+                z-index: 99;
+                &::before{
+                    transform: scale(30);
+                }
             }
 
             .nav_menu_item {
+                display: none;
                 &:not(:last-child) {
                     .nav_menu_link {
                         margin-bottom: 25px;
@@ -156,7 +194,7 @@
     top: 0;
     background-color: #fff;
     box-shadow: 0 10px 30px 0 rgba(#000, 0.04);
-    z-index: 9;
+    z-index: 99;
     border-radius: $border-radius;
     @extend %basic-grid;
     @include grid-col-startend(2, 2);
