--- a/src/styles/blocks/_badges.scss
+++ b/src/styles/blocks/_badges.scss
@@ -12,6 +12,11 @@
         margin-bottom: 8px;
         font-weight: 600;
         letter-spacing: 2.5px;
+
+        @include respond-below(xs) {
+            font-size: 8px;
+            line-height: 1rem;
+        }
     }
 
     &-card_info {
