--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -13,7 +13,8 @@
             &:not(:last-child) {
                 .nav_menu_link {
                     margin-right: 15px;
-                    @include respond-below(sm){
+
+                    @include respond-below(sm) {
                         margin-right: 5px;
                     }
                 }
@@ -22,6 +23,10 @@
 
         .nav_menu_link {
             color: #fff;
+
+            @include respond-below(xs) {
+                font-size: 0.7rem;
+            }
         }
     }
 
@@ -32,8 +37,12 @@
         grid-column-start: 2;
         grid-column-end: 3;
 
-        @media(max-width: 768px) {
-            grid-template-columns: 40px auto auto auto;
+        @include respond-below(sm) {
+            grid-template-columns: 40px 1fr 1fr auto;
+        }
+
+        @include respond-below(xs) {
+            grid-template-columns: 35px 1fr 1fr auto;
         }
     }
 
@@ -58,8 +67,14 @@
         @include justify-content(flex-start);
         @include align-items(center);
         padding-left: 40px;
-        @include respond-below(sm){
+
+        @include respond-below(sm) {
             padding-left: 20px;
+        }
+
+        @include respond-below(xs) {
+            padding-left: 10px;
+            @include justify-content(center);
         }
     }
 
@@ -84,7 +99,8 @@
             margin: 0 auto;
             z-index: -1;
             transform: translateY(-50%);
-            &::before{
+
+            &::before {
                 content: "";
                 border-radius: 0;
                 transform: scale(1);
@@ -104,13 +120,15 @@
                 border-radius: 0;
                 opacity: 1;
                 z-index: 99;
-                &::before{
+
+                &::before {
                     transform: scale(30);
                 }
             }
 
             .nav_menu_item {
                 display: none;
+
                 &:not(:last-child) {
                     .nav_menu_link {
                         margin-bottom: 25px;
@@ -142,12 +160,24 @@
             }
         }
 
-        @media(max-width: 992px) {
+        @include respond-below(md) {
             .btn {
                 padding: 0;
                 background-color: transparent;
                 border: none;
                 color: #fff;
+
+                &:hover {
+                    box-shadow: none;
+                }
+            }
+        }
+
+        @include respond-below(xs) {
+            @include justify-content(center);
+
+            .btn {
+                font-size: 0.7rem;
             }
         }
     }
@@ -157,32 +187,40 @@
         display: inline-block;
         margin-right: 10px;
 
-        @media(min-width: 992px) {
+        @include respond-above(md) {
             display: none;
+        }
+
+        @include respond-below(xs) {
+            margin-right: 5px;
         }
     }
 }
 
 .logo-mobile {
-    @media(min-width: 768px) {
+    @include respond-above(sm) {
         display: none;
     }
 }
 
 .logo-desktop {
-    @media(max-width: 767px) {
+    @include respond-below(sm) {
         display: none;
     }
 }
 
 .nav-mobilebtn {
     color: #fff;
+    background-color: transparent;
+    border: none;
     margin-left: auto;
+    padding: 0;
 
-    @media(min-width: 992px) {
+    @include respond-above(md) {
         display: none;
     }
 }
+
 
 //Explore menu
 .explore-menu {
