--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -16,6 +16,7 @@
 
     @include respond-below(xs) {
         height: 75vh;
+        min-height: 375px;
     }
 
     &_img {
@@ -39,12 +40,12 @@
             min-width: 300px;
 
             &--left {
-                left: -30vw;
-                bottom: -0vh;
+                left: -45vw;
+                bottom: -5vh;
             }
 
             &--right {
-                right: -25vw;
+                right: -40vw;
                 bottom: 5vh;
             }
         }
@@ -112,7 +113,10 @@
         grid-row-start: 3;
         position: relative;
         z-index: 8;
+        -webkit-transition: width, -webkit-transform 0.5s ease;
+        transition: width, -webkit-transform 0.5s ease;
         transition: width, transform 0.5s ease;
+        transition: width, transform 0.5s ease, -webkit-transform 0.5s ease;
 
         &:target {
             display: none;
@@ -122,7 +126,8 @@
             position: fixed;
             width: 100%;
             z-index: 99;
-            transform: translateY(-167px);
+            -webkit-transform: translateY(-60vw);
+            transform: translateY(-60vw);
 
             .search-cover_searchbox_input {
                 border-radius: 0 !important;
@@ -159,7 +164,9 @@
             text-align: center;
             font-weight: 100;
             border: 5px solid #fff;
+            -webkit-box-shadow: 0 5px 10px 0 rgba($brand-darker, 0);
             box-shadow: 0 5px 10px 0 rgba($brand-darker, 0);
+            -webkit-transition: all 0.3s;
             transition: all 0.3s;
 
             @include respond-below(md) {
@@ -177,11 +184,13 @@
                 font-size: 4vw;
                 line-height: 40px;
                 padding: 0 10px;
+                -webkit-box-shadow: 0 5px 30px 0 rgba(#000, 0.3);
                 box-shadow: 0 5px 30px 0 rgba(#000, 0.3);
             }
 
             &:focus,
             &active {
+                -webkit-box-shadow: 0 0px 50px 0 rgba($brand-darker, 0.7);
                 box-shadow: 0 0px 50px 0 rgba($brand-darker, 0.7);
                 outline: none;
             }
